Removing deprecated "script" module. Introduce CrawlCollector and CrawlCollectorFactory